force-app/main/default/objects/Court_Hearing_Outcome__c/Court_Hearing_Outcome__c.object-meta.xml
<CustomObject>
    <label>Court Hearing Outcome</label>
    <nameField>
        <label>Court Hearing Outcome Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Court Hearing Outcomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>