force-app/main/default/objects/Court_Hearing_Outcome__c/fields/Court_Hearing__c.field-meta.xml
<CustomField>
    <fullName>Court_Hearing__c</fullName>
    <label>Court Hearing</label>
    <referenceTo>Court_Hearing__c</referenceTo>
    <relationshipLabel>Court Hearing Outcomes</relationshipLabel>
    <relationshipName>Court_Hearing_Outcomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>