force-app/main/default/objects/Court_Hearing_Outcome__c/fields/Episode__c.field-meta.xml
<CustomField>
    <fullName>Episode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Episode</label>
    <referenceTo>Child_Episode__c</referenceTo>
    <relationshipLabel>Court Hearing Outcomes</relationshipLabel>
    <relationshipName>Court_Hearing_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>