force-app/main/default/objects/Court_Hearing_Outcome__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Investigation</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Court Hearing Outcomes</relationshipLabel>
    <relationshipName>Court_Hearing_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>