force-app/main/default/objects/Court_Hearing_Outcome__c/fields/Person__c.field-meta.xml
<CustomField>
    <fullName>Person__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Court Hearing Outcomes</relationshipLabel>
    <relationshipName>Court_Hearing_Outcomes</relationshipName>
    <type>Lookup</type>
</CustomField>